--- a/studies/frontend-mentor/index.html
+++ b/studies/frontend-mentor/index.html
@@ -94,6 +94,42 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="col-md-6 col-lg-4 mb-3">
+                            <a class="card challenge__card" href="#">
+                                <img src="https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="projeto" class="card-img-top img-fluid">
+                                <div class="card-body">
+                                    <h4 class="card-title">04 - QR CODE COMPONENT</h4>
+                                    <p class="card-text">Componente para leitura de QR code.</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-6 col-lg-4 mb-3">
+                            <a class="card challenge__card" href="#">
+                                <img src="https://images.unsplash.com/photo-1545529468-42764ef8c85f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=873&q=80" alt="projeto" class="card-img-top img-fluid">
+                                <div class="card-body">
+                                    <h4 class="card-title">05 - CROWDFUNDING PAGE</h4>
+                                    <p class="card-text">Página de crowdfunding para um produto.</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-6 col-lg-4 mb-3">
+                            <a class="card challenge__card" href="#">
+                                <img src="https://images.unsplash.com/photo-1484069560501-87d72b0c3669?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="projeto" class="card-img-top img-fluid">
+                                <div class="card-body">
+                                    <h4 class="card-title">06 - FAQ ACCORDION COMPONENT</h4>
+                                    <p class="card-text">Um componente de FAQ expansível.</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-6 col-lg-4 mb-3">
+                            <a class="card challenge__card" href="#">
+                                <img src="https://images.unsplash.com/photo-1494122504854-93d897bc884b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="projeto" class="card-img-top img-fluid">
+                                <div class="card-body">
+                                    <h4 class="card-title">07 - ORDER SUMMARY COMPONENT</h4>
+                                    <p class="card-text">Componente de resumo de compra.</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
